Bug 426690 - Hidden places shouldn't affect how KUrlNavigator behaves
Summary: Hidden places shouldn't affect how KUrlNavigator behaves
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: URL navigator (other bugs)
Version First Reported In: 5.74.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-18 14:47 UTC by ariasuni
Modified: 2020-10-10 16:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.76
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ariasuni 2020-09-18 14:47:08 UTC
SUMMARY
Since this PR[1], three new default places have been added to the Places pane in Dolphin. However, I don’t like them, and hiding them doesn’t change the behavior of the navigation bar (that is to say, only displaying the name of the folder, e.g. “> Downloads” instead of “> Home > Downloads” and I use this a lot to go back to my home directory).

Now I see why I can’t remove the Home, Root or Trash icon, but for those new default places, either I should be able to remove them, or hiding them should change how the Dolphin’s navigation bar works.

[1]: https://invent.kde.org/frameworks/kio/-/merge_requests/93

STEPS TO REPRODUCE
1. Open Dolphin
2. Right-click on “Documents”

OBSERVED RESULT
No possibility to remove the item

EXPECTED RESULT
Should be able to remove the item

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Comment 1 Ahmad Samir 2020-09-18 15:15:40 UTC
Open Dolphin -> Settings -> Configure Dolphin -> startup, enable "show full path inside location bar", do that restore the behaviour you want?
Comment 2 Bug Janitor Service 2020-10-03 04:33:15 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 ariasuni 2020-10-08 15:19:30 UTC
It’s not the same. When I’m in a subdirectory of my home folder, I still want the first item in the location bar to be «Home», but I don’t want it to happen for subdirectories because I like the consistency of the first item of the path staying the same while I stay inside my home directory and also I use it to go back to my home directory.

I feel like it makes sense to let the Root, Trash and Home directory not be removable because a user would have difficulty to add them back, but I don’t understand why «Documents» and «Downloads» bookmarks aren’t removable since they are easily re-addable.

For people stumbling upon this: you can edit `~/.local/share/user-places.xbel` but it’s kind of hard to figure out if you’re not tech-savvy and not sure what the consequences are if the file is corrupted.
Comment 4 Ahmad Samir 2020-10-09 20:20:35 UTC
I see your point, hidden places shouldn't affect how the navigation bar behaves (I didn't see the issue in my user account, but in a new user account I could clearly see what you were talking about).
Comment 5 Bug Janitor Service 2020-10-10 10:30:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/162
Comment 6 David Faure 2020-10-10 16:55:09 UTC
Git commit 74904f0cac872aac2423fe41adb115c3dc330ad5 by David Faure, on behalf of Ahmad Samir.
Committed on 10/10/2020 at 16:55.
Pushed by dfaure into branch 'master'.

KFilePlacesModel: ignore hidden places when computing closestItem

KUrlNavigator uses closestItem to get the closest bookmark so as to show it
as the first button in the url bar.

For example, open Dolphin on the Documents bookmark, "Documents" is shown
as the firstbutton in the urlbar (breadcrumb); now hide that bookmark, the
urlbal should now show "Home > Documents".
FIXED-IN: 5.76

M  +5    -0    src/filewidgets/kfileplacesmodel.cpp

https://invent.kde.org/frameworks/kio/commit/74904f0cac872aac2423fe41adb115c3dc330ad5